# detection-lab

./: .gitignore  06_assignment_object_detection.ipynb  Modelos a probar  README.md  main.py  pyproject.toml
configs/yolox/: yolox_s_voc.py
splits/: test_custom.txt  val_custom.txt
